# k9_system_pkg

./: .gitignore  README.md  arch.md  package.xml  setup.cfg  setup.py
assets/: Garden_and_Pond_Tasks.csv  canine_en_raspberry-pi_v3_0_0.ppn
k9_system_pkg/: back_lights.py  calendar.py  calendar_helper.py  context.py  context_pub.py  ears.py  eyes.py  eyestail.py  face_detection.py  gardentasks.py  get_creds.py  hotword.py  hotword_listener.py  internet_monitor.py  k9_bt.py  k9_calendar.py  k9_client.py  k9_logo_test.py  k9_stt_ros2.py  listen.py  next_up.py  oak_points_reframe_rewrite.py  ollama_wrap.py  stt.py  tail.py  voice.py  voice_action.py  voice_sm.py  weather.py
k9_system_pkg/launch/: k9.launch.py
launch/: k9.launch.py
