<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>k9_system_pkg</name>
  <version>0.0.0</version>
  <description>Collection of nodes for the K9 robot</description>
  <maintainer email="hopkira@googlemail.com">hopkira</maintainer>
  <license>Apache License</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>k9_interfaces_pkg</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>pvrecorder</exec_depend>
  <exec_depend>mediapipe</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
